ramos foot bootstrap

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,3 +1,82 @@
-<p>
-  footer works!
-</p>
+<footer class="container-fluid section section-white md-py-5 py-3 footer">
+  <div class="row justify-content-center pl-sm-0 py-5 px-3 pl-2 ">
+    <div class="col-xl-9 col-lg-10 col-md-11 col-12">
+      <div class="row txt-md-left mb-4 pl-sm-0 pl-1 justify-content-center logo-contact revealator-slideup revealator-once revealator-within">
+        <!--Container Logo and Contacts-->
+        <div class="col-xl-4 col-lg-5 col-md-6 col-sm-5 col-12">
+          <div class="row justify-content-center">
+            <!--Logo-->
+            <div class="col-3">
+              <a role="banner">
+                <img src="images/logo-mini.svg" alt="logo" role="link">
+              </a>
+            </div>
+            <!--Contacts-->
+            <div class="col-9 pl-sm-4 pl-md-2 pt-4">
+              <p class="title-list">Company</p>
+              <ul class="pl-0 company">
+                <li>
+                  <a class="link"
+                     href="file:///C:/Users/User/Downloads/Microsoft.SkypeApp_kzf8qxf38zg5c!App/All/footer.html#"
+                     role="link">Who we are
+                  </a>
+                </li>
+                <li>
+                  <a class="link"
+                     href="file:///C:/Users/User/Downloads/Microsoft.SkypeApp_kzf8qxf38zg5c!App/All/footer.html#"
+                     role="link">Expertise
+                  </a>
+                </li>
+                <li>
+                  <a class="link"
+                     href="file:///C:/Users/User/Downloads/Microsoft.SkypeApp_kzf8qxf38zg5c!App/All/footer.html#"
+                     role="link">Case Studies
+                  </a>
+                </li>
+                <li>
+                  <a class="link"
+                     href="file:///C:/Users/User/Downloads/Microsoft.SkypeApp_kzf8qxf38zg5c!App/All/footer.html#"
+                     role="link">WhitePapers
+                  </a>
+                </li>
+                <li>
+                  <a class="link"
+                     href="file:///C:/Users/User/Downloads/Microsoft.SkypeApp_kzf8qxf38zg5c!App/All/footer.html#"
+                     role="link">Contact
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <!--Container Address and Email-->
+        <div class="col-xl-7 col-lg-5 pt-sm-4 col-sm-5 col-12 pt-0">
+          <div class="row">
+            <!--Address-->
+            <div class="col-xl-6 col-sm-12 col-8 offset-sm-0 offset-3 pb-3">
+              <p class="text-left title-list">Address</p>
+              <ul class="p-0">
+                <li class="text-left d-block py-sm-2 py-0">ProvisionLab LLC.</li>
+                <li class="text-left d-block py-sm-2 py-0">9, Sklyarenko Str., Kyiv, 04073
+                  Ukraine.
+                </li>
+              </ul>
+            </div>
+            <div class="col-xl-1 col-lg-2 col-md-3 col-sm-3 col-3 pr-xl-5">
+              <img class="text-left email-ico" src="images/mail.svg" alt="mail">
+            </div>
+            <!--Email-->
+            <div class="col-xl-4 col-lg-10 col-md-9 col-sm-9 col-8 pl-md-3 pl-sm-2">
+              <p class="title-list mb-0">Send us an email</p>
+              <p>
+                <a class="link"
+                   href="file:///C:/Users/User/Downloads/Microsoft.SkypeApp_kzf8qxf38zg5c!App/All/footer.html#">contact@provisionlab.com</a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</footer>
