--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -13,7 +13,7 @@
             </div>
             <!--Contacts-->
             <div class="col-9 pl-sm-4 pl-md-2 pt-4">
-              <p class="title-list">Company</p>
+              <p class="title-list">Компания</p>
               <ul class="pl-0 company">
                 <li>
                   <a class="link"
