--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -63,7 +63,7 @@
               </ul>
             </div>
             <div class="col-xl-1 col-lg-2 col-md-3 col-sm-3 col-3 pr-xl-5">
-              <img class="text-left email-ico" src="images/mail.svg" alt="mail">
+              <img class="text-left email-ico" src="./assets/images/mail.svg" alt="mail">
             </div>
             <!--Email-->
             <div class="col-xl-4 col-lg-10 col-md-9 col-sm-9 col-8 pl-md-3 pl-sm-2">
