--- a/src/app/core/footer/footer.component.scss
+++ b/src/app/core/footer/footer.component.scss
@@ -11,12 +11,30 @@
   color: #f6f7ff;
   text-decoration: none;
 }
+.link{
+  position: relative;
+}
 
 .link:hover {
-  color: #483e72;
-  text-decoration: none;
-  transition: .3s ease;
   cursor: pointer;
+}
+.link:after{
+  content: '';
+  position: absolute;
+  width: 0; height: 3px;
+  display: block;
+  margin-top: 5px;
+  right: 0;
+  background: #fff;
+  transition: width .2s ease;
+  -webkit-transition: width .2s ease;
+}
+
+.link:hover:after{
+  width: 100%;
+  left: 0;
+  background: #fff;
+  transition: .7s ease;
 }
 
 .title-list {
