--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="container-fluid section section-white md-py-5 py-3 footer">
-  <div class="row justify-content-center pl-sm-0 py-5 px-3 pl-2 ">
+  <div class="row justify-content-center pl-sm-0 py-2 px-3 pl-2 ">
     <div class="col-xl-9 col-lg-10 col-md-11 col-12">
       <div class="row txt-md-left mb-4 pl-sm-0 pl-1 justify-content-center logo-contact revealator-slideup revealator-once revealator-within">
         <!--Container Logo and Contacts-->
@@ -62,7 +62,7 @@
                 </li>
               </ul>
             </div>
-            <div class="col-xl-1 col-lg-2 col-md-3 col-sm-3 col-3 pr-xl-5">
+            <div class="col-xl-1 col-lg-2 col-md-3 col-sm-3 col-3 pt-3 pr-xl-5">
               <img class="text-left email-ico" src="./assets/images/mail.svg" alt="mail">
             </div>
             <!--Email-->
