--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -7,8 +7,8 @@
           <div class="row justify-content-center">
             <!--Logo-->
             <div class="col-3">
-              <a role="banner">
-                <img src="images/logo-mini.svg" alt="logo" role="link">
+              <a role="banner" class="logo-link">
+                <img src="./assets/images/logo-mini.svg" alt="logo" role="link">
               </a>
             </div>
             <!--Contacts-->
