--- a/src/app/core/footer/footer.component.scss
+++ b/src/app/core/footer/footer.component.scss
@@ -50,6 +50,14 @@
   margin-right: .3rem;
   padding-top: .3rem;
 }
+
+.logo-link {
+  img {
+    display: block;
+    height: 60px;
+    width: 60px;
+  }
+}
 @media screen and (min-width: 360px) and (max-width: 575px) {
   .logo-contact{
     padding-left: 15%!important;
