--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -6,7 +6,7 @@
         <div class="col-xl-4 col-lg-5 col-md-6 col-sm-5 col-12">
           <div class="row justify-content-center">
             <!--Logo-->
-            <div class="col-3">
+            <div class="col-3 pt-4">
               <a role="banner" class="logo-link">
                 <img src="./assets/images/logo-mini.svg" alt="logo" role="link">
               </a>
