--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,4 +1,24 @@
-<p>
-  header works!
-</p>
+<header class="container-fluid header py-2" id="home">
+  <div class="row align-items-center">
+    <div class="col-3 pt-2">
+      <a href="#" class="logo">
+        <img src="./assets/images/logo.svg" alt="logo" role="link">
+      </a>
+    </div>
+    <div class="col pt-2">
+        <mat-form-field appearance="outline" style="width: 100%">
+          <mat-label>Outline form field</mat-label>
+          <input matInput placeholder="Placeholder">
+          <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+          <mat-hint>Hint</mat-hint>
+        </mat-form-field>
+    </div>
+    <div class="col-3">
+     <button>
+       <img src="./assets/images/iconfinder_menu-alt_134216.svg" alt="menu-btn" role="button">
+     </button>
+      
+    </div>
+  </div>
+</header>
 
