--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -2,22 +2,21 @@
   <div class="row align-items-center">
     <div class="col-3 pt-2">
       <a href="#" class="logo">
-        <img src="./assets/images/logo.svg" alt="logo" role="link">
+        <img src="./assets/images/logo.svg" class="d-none d-md-block" alt="logo" role="link">
+        <img src="./assets/images/logo-mini.svg" class="d-block d-md-none" alt="logo-mini" role="link">
       </a>
     </div>
-    <div class="col pt-2">
-        <mat-form-field appearance="outline" style="width: 100%">
-          <mat-label>Outline form field</mat-label>
-          <input matInput placeholder="Placeholder">
-          <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
-          <mat-hint>Hint</mat-hint>
-        </mat-form-field>
+    <div class="col pt-2 d-flex align-items-center">
+      <input type="text" placeholder="Поиск по сайту" class="px-3 py-2">
+      <button class="search-btn"><i class="material-icons">search</i></button>
     </div>
-    <div class="col-3">
-     <button>
-       <img src="./assets/images/iconfinder_menu-alt_134216.svg" alt="menu-btn" role="button">
+    <div class="col-3 d-flex align-items-center justify-content-end">
+     <button class="mt-3">
+       <i class="material-icons">notification_important</i>
      </button>
-      
+      <button class="mt-3">
+        <img src="./assets/images/iconfinder_menu-alt_134216.svg" alt="menu-btn" role="button">
+      </button>
     </div>
   </div>
 </header>
