--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -1,27 +1,45 @@
 #home {
   height: 100px;
-
+  background: cornflowerblue;
+  @media screen and (max-width:900px) {
+    height: auto;
+  }
   .row {
     height: 100%;
 
     div {
       height: 100%;
-
+      input{
+        width: 100%;
+        border:1px solid black;
+        border-radius:6px;
+        &:focus{
+          outline: none;
+          border-color:deepskyblue;
+        }
+      }
       .logo {
         display: block;
         width: 200px;
         height: 70px;
-
+        @media screen and (max-width:767px) {
+          width: 67px;
+        }
         img {
           display: block;
           width: 100%;
           height: 100%;
         }
       }
-
       button {
         background-color: transparent;
         border:none;
+        cursor: pointer;
+      }
+      .search-btn{
+        position: absolute;
+        right: 20px;
+        background-color: #fff;
       }
     }
   }
